# FairyTale

./: .gitignore  down.sh  help.txt  next.config.ts  package-lock.json  package.json  postcss.config.js  requirements.txt  start.sh  tailwind.config.ts
AI-Backend/: README.md  pyproject.toml  requirements.txt  start-mcp-server.sh
AI-Backend/mcp-server/: client.py
AI-Backend/mcp-server(sewon)/: client.py
AI-Backend/mcp-server/utility/: image_generation.py  llm.py  stt.py  tts.py
app/: globals.css  layout.tsx  main.py  page.tsx  s3_utils.py
app/api/proxy-upload/: route.ts
app/history/: page.tsx
app/loading/: LoadingClient.tsx  page.tsx
app/questions/: page.tsx
app/selection/: SelectionContent.tsx  page.tsx
app/storybook/[id]/: page.tsx
app/storypage/: StoryPageClient.tsx  page.tsx
components/: BookOpening.tsx  HelpDialog.tsx  home-button.tsx  theme-background.tsx  theme-switcher.tsx
components/ui/: calendar.tsx  card-with-balloon.tsx
hooks/: use-audio-recorder.ts
hyodaeTemporary/: README.md  client.stdio.py  client_streamablehttp.py  fetch_url_mcp_server.py  pyproject.toml
hyodaeTemporary/mcp-server/: client.py  client_streamablehttp.py  mcp_server.py
hyodaeTemporary/mcp-server/resources/: s3_resource.py
hyodaeTemporary/mcp-server/utility/: image_generation.py  llm.py  tts.py
lib/: storybook-service.ts
storybook/app/: layout.tsx  page.tsx
storybook/app/selection/: page.tsx
storybook/components/: theme-background.tsx
storybook/hooks/: use-auto-playback.ts
storybook/lib/: theme-utils.ts
