[project]
name = "mcp-server"
version = "0.1.0"
description = "mcp-server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # FastAPI
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "click==8.2.0",
    "fastapi==0.115.12",
    "h11==0.16.0",
    "idna==3.10",
    "jmespath==1.0.1",
    "pydantic==2.11.4",
    "pydantic_core==2.33.2",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.20",
    "s3transfer==0.11.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "typing-inspection==0.4.0",
    "typing_extensions==4.13.2",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "httpx==0.28.1",
    "requests==2.32.3",

    # AWS
    "boto3==1.37.2",
    "botocore==1.37.3",
    "aioboto3==14.3.0",

    # MCP
    "mcp==1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server.py"]

[project.scripts]
s3-mcp-server = "s3_mcp_server:main"
mcp-server = "mcp_server:main"